test/JDBC/expected/sys-sp_pkeys-vu-verify.out
use master
go

-- syntax error: @table_name is required
exec sp_pkeys
go
~~ERROR (Code: 201)~~

~~ERROR (Message: procedure sp_pkeys expects parameter "@table_name", which was not supplied.)~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t1'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t1#!#a#!#1#!#sys_sp_pkeys_vu_prepare_t1_pkey
~~END~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t2', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#b#!#1#!#sys_sp_pkeys_vu_prepare_t2_pkey
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#c#!#2#!#sys_sp_pkeys_vu_prepare_t2_pkey
~~END~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t3', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t3#!#c#!#1#!#sys_sp_pkeys_vu_prepare_t3_pkey
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t3#!#b#!#2#!#sys_sp_pkeys_vu_prepare_t3_pkey
~~END~~


-- unnamed invocation
exec sp_pkeys 'sys_sp_pkeys_vu_prepare_t1', 'dbo', 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
master#!#dbo#!#sys_sp_pkeys_vu_prepare_t1#!#a#!#1#!#sys_sp_pkeys_vu_prepare_t1_pkey
~~END~~


-- cross reference database 
use sys_sp_pkeys_vu_prepare_db1
go

-- syntax error: @table_name is required
exec sp_pkeys
go
~~ERROR (Code: 201)~~

~~ERROR (Message: procedure sp_pkeys expects parameter "@table_name", which was not supplied.)~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t1'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t1#!#a#!#1#!#sys_sp_pkeys_vu_prepare_t1_pkey
~~END~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t2', @table_qualifier = 'sys_sp_pkeys_vu_prepare_db1'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#b#!#1#!#sys_sp_pkeys_vu_prepare_t2_pkey
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#c#!#2#!#sys_sp_pkeys_vu_prepare_t2_pkey
~~END~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t2', @table_qualifier = 'master'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
~~END~~


exec sp_pkeys @table_name = 'sys_sp_pkeys_vu_prepare_t3', @table_owner = 'dbo'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t3#!#c#!#1#!#sys_sp_pkeys_vu_prepare_t3_pkey
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t3#!#b#!#2#!#sys_sp_pkeys_vu_prepare_t3_pkey
~~END~~


-- unnamed invocation
exec sp_pkeys 'sys_sp_pkeys_vu_prepare_t1', 'dbo', 'sys_sp_pkeys_vu_prepare_db1'
go
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t1#!#a#!#1#!#sys_sp_pkeys_vu_prepare_t1_pkey
~~END~~


-- case-insensative invocation
EXEC SP_PKEYS @TABLE_NAME = 'sys_sp_pkeys_vu_prepare_t2', @TABLE_OWNER = 'dbo', @TABLE_QUALIFIER = 'sys_sp_pkeys_vu_prepare_db1'
GO
~~START~~
varchar#!#varchar#!#varchar#!#varchar#!#smallint#!#varchar
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#b#!#1#!#sys_sp_pkeys_vu_prepare_t2_pkey
sys_sp_pkeys_vu_prepare_db1#!#dbo#!#sys_sp_pkeys_vu_prepare_t2#!#c#!#2#!#sys_sp_pkeys_vu_prepare_t2_pkey
~~END~~

